--- a/bridge.html
+++ b/bridge.html
@@ -30,6 +30,6 @@
         You need to enable JavaScript to run this app.
       </noscript>
       <div id="bridge"></div>
-      <script type="text/javascript" src="/static/js/bundle.js"></script>
+      <script type="text/javascript" src="static/js/bundle.js"></script>
   </body>
 </html>
